--- a/client/index.html
+++ b/client/index.html
@@ -64,6 +64,12 @@
                             <p>Купите шарики, чтобы присоединиться к игре!</p>
                         </div>
                     </div>
+                    <div class="lobby-actions">
+                        <p>У вас: <span id="playerBallCount">0</span> шариков 🎱</p>
+                        <button id="startGameBtn" class="btn btn-success" disabled>
+                            🚀 Начать игру
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
