--- a/client/index.html
+++ b/client/index.html
@@ -225,6 +225,8 @@
         </div>
     </div>
 
+    <!-- JavaScript files -->
+    <script src="js/game.js"></script>
     <script src="js/app.js"></script>
 </body>
 
